# saison

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.py
dataprocessing/reduction_dataset/: cheatsheet.md  dataset_creation.ipynb  export_pickle.py  import_pickle.py  transfert_gcp.ipynb
model/: finetuning.py
src/: cli.py  data_cleaner.ipynb  data_cleaner.py  transfert_gcp.ipynb  webcam_yolo.ipynb
src/appFlask/: Dockerfile  requirements.txt  setup.py
src/appFlask/data/: season.json
src/appFlask/models/: model.py
src/appFlask/src/: app.py  custom_function.py  model.py  webcam_yolo.ipynb
src/appFlask/src/static/: common.css  index.css  mode_photo.css  mode_photo_result.css  mode_video.css  result.css
src/appFlask/src/templates/: index.html  mode_photo.html  mode_photo_result.html  mode_video.html  result.html
src/models/: finetuning.py
src/models/yolo_segmentation/: data.yaml  main.py  nohup_iter0.out
src/models/yolo_segmentation/runs/detect_iter0/train2/: args.yaml
src/models/yolo_segmentation/runs/detect_iter0/train3/: args.yaml
src/models/yolo_segmentation/runs/detect_iter0/train4/: args.yaml  results.csv
src/models/yolo_segmentation/runs/detect_iter1/train/: args.yaml  results.csv
src/models/yolo_total/: data.yaml  main.py  run_from_weights.py
src/models/yolo_total/runs/detect/train10/: args.yaml
src/models/yolo_total/runs/detect/train12/: args.yaml  results.csv
src/models/yolo_total/runs/detect/train3/: args.yaml
src/models/yolo_total/runs/detect/train5/: args.yaml
(+10 files in other folders)
