[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saison"
dynamic = ["version"]
description = "Project to detect fruits and vegetables and to indicate if they are seasonal."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
authors = [
    { name = "Joeffrey Elis", email = "google@jomojo.net" },
    { name = "Luc Beltran", email = "beltranluc0@gmail.com" },
    { name = "Jean Philippe Meline", email = "jeanphilippe.meline@gmail.com" },
    { name = "Eric Hu", email = "hueric1997@gmail.com" }
]
dependencies = [
    "click==8.1.3",
    "Pillow==9.1.1"
]

[project.urls]
homepage = "https://github.com/M4DMojO/saison"

[project.scripts]
saison = "src.cli:saison"

[tool.setuptools.packages]
find = {}
